<resources>
    <string name="app_name">Easy Password Generator</string>
    <string name="fragment_title_info">Info</string>
    <string name="fragment_title_help">Help</string>
    <string name="activity_preset_password_generation_password_copied_to_clipboard">Copied to clipboard.</string>
    <string name="activity_preset_password_generation_password_generate">Generate</string>
    <string name="activity_preset_password_generation_password_length">Password length</string>
    <string name="activity_preset_password_generation_password_type">Password type</string>
    <string name="activity_preset_password_generation_number_of_passwords">Number of passwords</string>
    <string name="activity_preset_password_generation_title">Template Passwords</string>
    <string name="activity_custom_password_generation_title">Custom Passwords</string>
    <string name="clip_data_label_password">Password generated by Easy Password Manager</string>
    <string name="content_description_copy_to_clipboard">Copy to clipboard</string>
    <string name="password_type_complex_passwords">Complex Passwords</string>
    <string name="password_type_internet_passwords">Internet Passwords</string>
    <string name="password_type_wep_128">WEP-Keys (128 bit)</string>
    <string name="password_type_wep_256">WEP-Keys (256 bit)</string>
    <string name="password_type_wep_64">WEP-Keys (64 bit)</string>
    <string name="password_type_wpa2">WPA2-Keys</string>
    <string name="custom_password_settings_title_leading_characters">Leading Characters</string>
    <string name="custom_password_settings_title_main">Characters</string>
    <string name="custom_password_Settings_title_trailing_characters">Trailing Characters</string>
    <string name="custom_password_settings_A_to_Z" translatable="false">A - Z</string>
    <string name="custom_password_settings_a_to_z" translatable="false">a - z</string>
    <string name="custom_password_settings_0_to_9" translatable="false">0 - 9</string>
    <string name="custom_password_settings_special_characters">Special Characters</string>
    <string name="custom_password_section_length">Length</string>
    <string name="custom_password_speaking_password">Speaking Password</string>
    <string name="custom_password_avoid_similar_characters">Avoid similar characters</string>
    <string name="custom_password_at_least_one_checkbox">At least one Checkbox must be active.</string>
    <string name="navi_drawer_open">Open Navigation Drawer</string>
    <string name="navi_drawer_close">Close Navigation Drawer</string>
    <string name="nav_item_title_preset_password_generation">Template Passwords</string>
    <string name="nav_item_title_custom_password_generation">Custom Passwords</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_about_us">Info</string>
    <string name="info_text_author">Author</string>
    <string name="info_subtext_author" translatable="false">Tobias Hess</string>
    <string name="info_text_email">Contact E-Mail</string>
    <string name="info_subtext_email" translatable="false">framersoft@gmail.com</string>
    <string name="info_text_source_code">Source Code</string>
    <string name="info_subtext_source_code" translatable="false">https://github.com/Fr4meR/easy-password-generator</string>
    <string name="info_text_version_name">Version</string>
    <string name="info_text_version_code">Build Number</string>
    <string name="info_text_version_common">Common Version</string>
    <string name="info_contact_email_subject">Contact: Easy Password Generator</string>
    <string name="info_contact_email_intent_chooser">Send E-mail</string>
    <string name="help_header_missing">No help topic available</string>
    <string name="help_content_missing">No content available.</string>
    <string name="help_header_menu_items">Menu Items</string>
    <string name="help_menu_items_template_passwords">Template Passwords</string>
    <string name="help_menu_items_custom_passwords">Custom Passwords</string>
    <string name="help_menu_items_help">Help</string>
    <string name="help_menu_items_info">Info</string>
    <string name="help_header_templates">Password Templates</string>
    <string name="help_templates_internet_passwords">Internet Passwords</string>
    <string name="help_templates_complex_passwords">Complex Passwords</string>
    <string name="help_templates_wep_keys">WEP-Keys</string>
    <string name="help_templates_wpa2_keys">WPA2-Keys</string>
    <string name="help_content_menu_items_template_passwords">
         <![CDATA[
        <p>Under this menu item passwords can be created using templates.</p>
        <p>Description of the functions:</p>

        <p>
            <b>Password type</b><br />
            This selects the desired template. More information about the different templates
            are available in the <i>Password Templates</i> section of the help.
        </p>
        <p>
            <b>Password length</b><br />
            Use this slider to set the desired password length. This slider is only available for
            templates that allow a variable password length.
        </p>
        <p>
            <b>Number of passwords</b><br />
               Use this slider to set the number of passwords to create.
        </p>
        <p>
            <b>Generate</b><br />
            Use this button to generate the passwords with the settings you have made.
        </p>

        <p>
            If the passwords are generated, you will see the generated passwords in a list.
            For each password, a rating for its strength is displayed. A green rating means
            <b>strong</ b>, a yellow <b>medium</ b>, and a red <b>weak</ b>. In addition, a
            password can be copied to the clipboard via the respective button.
        </p>
        ]]>
    </string>
    <string name="help_content_menu_items_custom_passwords">
        <![CDATA[
            <p>Under this menu item custom passwords can be created.</p>
            <p>Description of the functions:</p>

            <p>
                <b>Leading Characters / Trailing Characters</b><br />
                Leading / Trailing Characters will be generated at the beginning / end of the password.
                For these you can use the checkboxes to configure which characters can occur and with
                the slider u can configure how many leading / trailing characters will be in the password.
                If you set the number of leading / trailing characters to 0 or deactivate all characters
                no leading / trailing characters will occur in the password.
            </p>

            <p>
                <b>Main Characters</b><br />
                The main characters will build the main part of the generated password. For this part
                the checkboxes can be used to configure which characters can occur. At least one checkbox
                has to be active. The length of the main part will be determined indirectly via the
                password length.
            </p>

            <p>
                <b>Speaking Password</b><br />
                You can activate this function via the Speaking Password checkbox. For this option to
                be available, at least one area (Leading Characters, Main Characters, Trailing Characters)
                must consist of letters only.<br />
                This feature ensures that in sections that are containing only of letters a pronounceable
                password will be generated. Pronounceable means that a vowel and a consonant will be generated
                alternately.
            </p>

            <p>
                <b>Avoid similar characters</b><br />
                If this checkbox is active the generated password will not contain similar looking
                characters like 1 and l, O and 0, etc.
            </p>

            <p>
                <b>Password length</b><br />
                Use this slider to set the desired password length. The minimum length of the password
                will always be length of the leading / trailing characters + 1.
            </p>
            <p>
                <b>Number of passwords</b><br />
                   Use this slider to set the number of passwords to create.
            </p>
            <p>
                <b>Generate</b><br />
                Use this button to generate the passwords with the settings you have made.
            </p>

            <p>
                If the passwords are generated, you will see the generated passwords in a list.
                For each password, a rating for its strength is displayed. A green rating means
                <b>strong</ b>, a yellow <b>medium</ b>, and a red <b>weak</ b>. In addition, a
                password can be copied to the clipboard via the respective button.
            </p>
        ]]>
    </string>
    <string name="help_content_menu_items_help">
        <![CDATA[
            <p>
                This menu items contains the help of the app.
            </p>
        ]]>
    </string>
    <string name="help_content_menu_items_info">
        <![CDATA[
            <p>
                This menu item contains some meta information about this app, e.g. the author,
                a contact e-mail address, version information, etc.
            </p>
        ]]>
    </string>
    <string name="help_content_templates_internet_passwords">
        <![CDATA[
            <p>Use this template to create memorable passwords.</p>
            <p>
                It is possible to set the password length for this template. The generated passwords
                will consist of a capital letter followed by lowercase letters and three digits
                at the end. Furthermore the password is talking - this means, that the password
                consists alternately of a vowel and a consonant.
            </p>
        ]]>
    </string>
    <string name="help_content_templates_complex_passwords">
        <![CDATA[
            <p>Use this template to create complex passwords.</p>
            <p>
                It is possible to set the password length for this template. The generated
                passwords will consist of upper- and lowercase letters, digits and special characters.
            </p>
        ]]>
    </string>
    <string name="help_content_templates_wep_keys">
        <![CDATA[
            <p>Use this template to create WEP-Keys.</p>
            <p>
                It is not possible to set the password length. The generated passwords can be used
                for WEP encryption.
            </p>
        ]]>
    </string>
    <string name="help_content_templates_wpa2_keys">
        <![CDATA[
            <p>Use this template to create WPA2-Keys.</p>
            <p>
                It is not possible to set the password length. The generated passwords can be used
                for WPA2 encryption.
            </p>
        ]]>
    </string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_dialog_ok">Rate</string>
    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_no">Never</string>
    <string name="shared_pref_file_custom_password" translatable="false">de.framersoft.easypasswordgenerator.custom_password_generation</string>
    <string name="shared_pref_file_preset_password" translatable="false">de.framersoft.easypasswordgenerator.preset_password_generation</string>
    <string name="shared_pref_key_general_password_length" translatable="false">password_length</string>
    <string name="shared_pref_key_general_number_of_passwords" translatable="false">number_of_passwords</string>
</resources>