<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Main section -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="?android:textColorPrimary"
        android:text="@string/custom_password_settings_title_main" />

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2">

        <CheckBox
            android:id="@+id/checkBox_A_to_Z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:textColor="?android:textColorSecondary"
            android:text="@string/custom_password_settings_A_to_Z"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/checkBox_a_to_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:textColor="?android:textColorSecondary"
            android:text="@string/custom_password_settings_a_to_z"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/checkBox_0_to_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:textColor="?android:textColorSecondary"
            android:text="@string/custom_password_settings_0_to_9"/>

        <CheckBox
            android:id="@+id/checkBox_special_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:textColor="?android:textColorSecondary"
            android:text="@string/custom_password_settings_special_characters"/>

    </android.support.v7.widget.GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorCardDivider" />

    <!-- Prefix -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:text="@string/custom_password_settings_title_leading_characters" />

        <Switch
            android:id="@+id/switch_prefix_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_prefix_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <CheckBox
                android:id="@+id/checkBox_prefix_A_to_Z"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_A_to_Z"
                android:checked="true" />

            <CheckBox
                android:id="@+id/checkBox_prefix_a_to_z"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_a_to_z" />

            <CheckBox
                android:id="@+id/checkBox_prefix_0_to_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_0_to_9" />

            <CheckBox
                android:id="@+id/checkBox_prefix_special_characters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_special_characters" />

        </android.support.v7.widget.GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:layout_marginTop="8dp"
            android:text="@string/custom_password_section_length" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <SeekBar
                android:id="@+id/seekBar_prefix_length"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:progress="1"
                android:max="10" />

            <TextView
                android:id="@+id/textView_prefix_length"
                android:textColor="?android:textColorSecondary"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorCardDivider" />

    </LinearLayout>

    <!-- Postfix -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:text="@string/custom_password_Settings_title_trailing_characters" />

        <Switch
            android:id="@+id/switch_postfix_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_postfix_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <CheckBox
                android:id="@+id/checkBox_postfix_A_to_Z"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_A_to_Z"/>

            <CheckBox
                android:id="@+id/checkBox_postfix_a_to_z"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_a_to_z"/>

            <CheckBox
                android:id="@+id/checkBox_postfix_0_to_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_0_to_9"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/checkBox_postfix_special_characters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:textColor="?android:textColorSecondary"
                android:text="@string/custom_password_settings_special_characters"/>

        </android.support.v7.widget.GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?android:textColorSecondary"
            android:text="@string/custom_password_section_length" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <SeekBar
                android:id="@+id/seekBar_postfix_length"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:progress="3"
                android:max="10" />

            <TextView
                android:id="@+id/textView_postfix_length"
                android:textColor="?android:textColorSecondary"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorCardDivider" />
    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox_speaking_password"
        android:text="@string/custom_password_speaking_password"
        android:checked="true"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox_avoid_similar_characters"
        android:text="@string/custom_password_avoid_similar_characters"
        android:checked="true"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorCardDivider" />

</LinearLayout>