<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView_preset_password_configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/linearLayout_container_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ViewStub
                android:id="@+id/viewStub_additional_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textView_password_length_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/activity_preset_password_generation_password_length"
                android:textColor="?android:textColorPrimary"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


            <LinearLayout
                android:id="@+id/linearLayout_password_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBar_password_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="29"
                    android:progress="5" />

                <TextView
                    android:id="@+id/textView_password_length"
                    android:textColor="?android:textColorSecondary"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView_number_of_passwords_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_preset_password_generation_number_of_passwords"
                android:textColor="?android:textColorPrimary"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:id="@+id/linearLayout_number_of_passwords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBar_number_of_passwords"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="19"
                    android:progress="4" />

                <TextView
                    android:id="@+id/textView_number_of_passwords"
                    android:textColor="?android:textColorSecondary"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_generate_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_preset_password_generation_password_generate" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>